update mgmt API session endpoints to display multi-instance info
